==> develersrl/bertos/drv/ser_avr.c <==
#include "ser.h"
#include "ser_p.h"
#include "hw.h"  /* Required for bus macros overrides */
#include <appconfig.h>
#include <cfg/debug.h>
#include <drv/timer.h>
#include <mware/fifobuf.h>
#include <avr/io.h>
	#include <avr/interrupt.h>
	#include <avr/signal.h>
	#define RTS_ON      do {} while (0)
	#define RTS_OFF     do {} while (0)
	#define IS_CTS_ON   true
	#define EIMSKF_CTS  0 /*!< Dummy value, must be overridden */
	#define SER_UART0_BUS_TXINIT do { \
		UCSR0B = BV(RXCIE) | BV(RXEN) | BV(TXEN); \
	} while (0)
	#define SER_UART0_BUS_TXBEGIN do { \
		UCSR0B = BV(RXCIE) | BV(UDRIE) | BV(RXEN) | BV(TXEN); \
	} while (0)
	#define SER_UART0_BUS_TXCHAR(c) do { \
		UDR0 = (c); \
	} while (0)
	#define SER_UART0_BUS_TXEND do { \
		UCSR0B = BV(RXCIE) | BV(RXEN) | BV(TXEN); \
	} while (0)
	#define SER_UART0_BUS_TXOFF
	#define SER_UART1_BUS_TXINIT do { \
		UCSR1B = BV(RXCIE) | BV(RXEN) | BV(TXEN); \
	} while (0)
	#define SER_UART1_BUS_TXBEGIN do { \
		UCSR1B = BV(RXCIE) | BV(UDRIE) | BV(RXEN) | BV(TXEN); \
	} while (0)
	#define SER_UART1_BUS_TXCHAR(c) do { \
		UDR1 = (c); \
	} while (0)
	#define SER_UART1_BUS_TXEND do { \
		UCSR1B = BV(RXCIE) | BV(RXEN) | BV(TXEN); \
	} while (0)
	#define SER_UART1_BUS_TXOFF
	#define SER_SPI_BUS_TXINIT
	#define SER_SPI_BUS_TXCLOSE
	#define SPI_PORT      PORTB
	#define SPI_DDR       DDRB
	#define SPI_SCK_BIT   PB1
	#define SPI_MOSI_BIT  PB2
	#define SPI_MISO_BIT  PB3
	#define SPI_PORT      PORTB
	#define SPI_DDR       DDRB
	#define SPI_SCK_BIT   PB5

static void uart0_setbaudrate(UNUSED_ARG(struct SerialHardware *, _hw), unsigned long rate)
{
	/* Compute baud-rate period */
	uint16_t period = (((CLOCK_FREQ / 16UL) + (rate / 2)) / rate) - 1;

#if !CPU_AVR_ATMEGA103
	UBRR0H = (period) >> 8;
#endif
	UBRR0L = (period);

	//DB(kprintf("uart0_setbaudrate(rate=%lu): period=%d\n", rate, period);)
}

static void uart0_setparity(UNUSED_ARG(struct SerialHardware *, _hw), int parity)
{
#if !CPU_AVR_ATMEGA103
	UCSR0C = (UCSR0C & ~(BV(UPM1) | BV(UPM0))) | ((parity) << UPM0);
#endif
}

static void uart1_setbaudrate(UNUSED_ARG(struct SerialHardware *, _hw), unsigned long rate)
{
	/* Compute baud-rate period */
	uint16_t period = (((CLOCK_FREQ / 16UL) + (rate / 2)) / rate) - 1;

	UBRR1H = (period) >> 8;
	UBRR1L = (period);

	//DB(kprintf("uart1_setbaudrate(rate=%ld): period=%d\n", rate, period);)
}

static void uart1_setparity(UNUSED_ARG(struct SerialHardware *, _hw), int parity)
{
	UCSR1C = (UCSR1C & ~(BV(UPM1) | BV(UPM0))) | ((parity) << UPM0);
}
