==> develersrl/bertos/bertos/cpu/cortex-m3/drv/ser_sam3.c <==
#include "hw/hw_ser.h"  /* Required for bus macros overrides */
#include <hw/hw_cpufreq.h>  /* CPU_FREQ */
#include "cfg/cfg_ser.h"
#include <cfg/debug.h>
#include <io/cm3.h>
#include <drv/irq_cm3.h>
#include <cpu/attr.h>
#include <drv/ser.h>
#include <drv/ser_p.h>
#include <struct/fifobuf.h>
#define SERIRQ_PRIORITY 4 ///< default priority for serial irqs.
	#define SER_UART0_BUS_TXINIT do { \
		PIOA_PDR = BV(RXD0) | BV(TXD0); \
	} while (0)
	#define SER_UART0_BUS_TXBEGIN
	#define SER_UART0_BUS_TXCHAR(c) do { \
		US0_THR = (c); \
	} while (0)
	#define SER_UART0_BUS_TXEND
			#define SER_UART1_BUS_TXINIT do { \
				PIOA_PDR = BV(RXD1) | BV(TXD1); \
			} while (0)
			#define SER_UART1_BUS_TXINIT do { \
				PIOB_PDR = BV(RXD1) | BV(TXD1); \
			} while (0)
		#define SER_UART1_BUS_TXBEGIN
		#define SER_UART1_BUS_TXCHAR(c) do { \
			US1_THR = (c); \
		} while (0)
		#define SER_UART1_BUS_TXEND
		#define SER_SPI0_BUS_TXINIT do { \
			/* Disable PIO on SPI pins */ \
			PIOA_PDR = BV(SPI0_SPCK) | BV(SPI0_MOSI) | BV(SPI0_MISO); \
			/* PIO is peripheral A */ \
			PIOA_ABCDSR1 &= ~(BV(SPI0_SPCK) | BV(SPI0_MOSI) | BV(SPI0_MISO)); \
			PIOA_ABCDSR2 &= ~(BV(SPI0_SPCK) | BV(SPI0_MOSI) | BV(SPI0_MISO)); \
		} while (0)
		#define SER_SPI0_BUS_TXINIT do { \
			/* Disable PIO on SPI pins */ \
			PIOA_PDR = BV(SPI0_SPCK) | BV(SPI0_MOSI) | BV(SPI0_MISO); \
		} while (0)

static void uart0_setbaudrate(UNUSED_ARG(struct SerialHardware *, _hw), unsigned long rate)
{
	/* Compute baud-rate period */
	US0_BRGR = CPU_FREQ / (16 * rate);
	//DB(kprintf("uart0_setbaudrate(rate=%lu): period=%d\n", rate, period);)
}

static void uart0_setparity(UNUSED_ARG(struct SerialHardware *, _hw), int parity)
{
	US0_MR &= ~US_PAR_MASK;
	/* Set UART parity */
	switch(parity)
	{
		case SER_PARITY_NONE:
		{
			/* Parity none. */
			US0_MR |= US_PAR_NO;
			break;
		}
		case SER_PARITY_EVEN:
		{
			/* Even parity. */
			US0_MR |= US_PAR_EVEN;
			break;
		}
		case SER_PARITY_ODD:
		{
			/* Odd parity. */
			US0_MR |= US_PAR_ODD;
			break;
		}
		default:
			ASSERT(0);
	}
}

static void uart1_setbaudrate(UNUSED_ARG(struct SerialHardware *, _hw), unsigned long rate)
{
	/* Compute baud-rate period */
	US1_BRGR = CPU_FREQ / (16 * rate);
	//DB(kprintf("uart0_setbaudrate(rate=%lu): period=%d\n", rate, period);)
}

static void uart1_setparity(UNUSED_ARG(struct SerialHardware *, _hw), int parity)
{
	US1_MR &= ~US_PAR_MASK;
	/* Set UART parity */
	switch(parity)
	{
		case SER_PARITY_NONE:
		{
			/* Parity none. */
			US1_MR |= US_PAR_NO;
			break;
		}
		case SER_PARITY_EVEN:
		{
			/* Even parity. */
			US1_MR |= US_PAR_EVEN;
			break;
		}
		case SER_PARITY_ODD:
		{
			/* Odd parity. */
			US1_MR |= US_PAR_ODD;
			break;
		}
		default:
			ASSERT(0);
	}
}
